--- a/src/App.css
+++ b/src/App.css
@@ -120,15 +120,17 @@ p, h1,h2,h3 {
 }
 
 body.colorized {
-    background-color: #e5ff86;
+    /* background-color: #85FFBD; */
+    background-image: linear-gradient(75deg, #85FFBD 0%, #FFFB7D 100%);
 }
 
 .navBar.colorized {
-    background-color: #e5ff86;
+    background-color: #85ffbe00;
+
 }
 
 footer.colorized {
-    background-color: #e5ff86;
+    background-color: #85ffbe00;
 }
 
 main.background-image {
